--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "set WEBPACK_ENV=dev && webpack-dev-server --inline --port 9999",
-    "dist":"set WEBPACK_ENV=online && webpack -p",
+    "dist": "set WEBPACK_ENV=online && webpack -p",
     "dev_linux": "WEBPACK_ENV=dev webpack-dev-server --inline --port 9999",
-    "dist_linux":"WEBPACK_ENV=online webpack -p"
+    "dist_linux": "WEBPACK_ENV=online webpack -p"
   },
   "repository": {
     "type": "git",
@@ -29,5 +29,8 @@
     "webpack": "^1.15.0",
     "webpack-dev-server": "^1.16.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "font-awesome": "^4.7.0",
+    "hogan": "^1.0.2"
+  }
 }
